[tool.poetry]
name = "configkit"
version = "0.1.0"
description = "Easy to use versioned config files"
authors = ["Te-jé Rodgers <tjd.rodgers@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.5"
packaging = "^19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
